2 June 2016: Wouter
	- Fix libubound for edns optlist feature.
	- Fix distinction between free and CRYPTO_free in dsa and ecdsa alloc.
	- Fix #752: retry resource temporarily unavailable on control pipe.
	- un-document localzone tags.

31 May 2016: Wouter
	- Fix windows service to be created run with limited rights, as a
	  network service account, from Mario Turschmann.
	- compat strsep implementation.
	- generic edns option parse and store code.
	- and also generic edns options for upstream messages (and replies).
	  after parse use edns_opt_find(edns.opt_list, LDNS_EDNS_NSID),
	  to insert use edns_opt_append(edns, region, code, len, bindata) on
	  the opt_list passed to send_query, or in edns_opt_inplace_reply.

30 May 2016: Wouter
	- Fix time in case answer comes from cache in ub_resolve_event().
	- Attempted fix for #765: _unboundmodule missing for python3.

27 May 2016: Wouter
	- Fix #770: Small subgroup attack on DH used in unix pipe on localhost
	  if unbound control uses a unix local named pipe.
	- Document write permission to directory of trust anchor needed.
	- Fix #768:  Unbound Service Sometimes Can Not Shutdown
	  Completely, WER Report Shown Up.  Close handle before closing WSA.

26 May 2016: Wouter
	- Updated patch from Charles Walker.

24 May 2016: Wouter
	- disable-dnssec-lame-check config option from Charles Walker.
	- remove memory leak from lame-check patch.
	- iana portlist update.

23 May 2016: Wouter
	- Fix #767:  Reference to an expired Internet-Draft in
	  harden-below-nxdomain documentation.

20 May 2016: Ralph
	- No QNAME minimisation fall-back for NXDOMAIN answers from DNSSEC 
	  signed zones.
	- iana portlist update.

19 May 2016: Wouter
	- Fix #766: dns64 should synthesize results on timeout/errors.

18 May 2016: Wouter
	- Fix #761: DNSSEC LAME false positive resolving nic.club.

17 May 2016: Wouter
	- trunk updated with output of flex 2.6.0.

6 May 2016: Wouter
	- Fix memory leak in out-of-memory conditions of local zone add.
